@@ -4,6 +4,7 @@ import id.ac.ui.cs.advprog.adproggameshop.enums.CategoryEnums;
 import id.ac.ui.cs.advprog.adproggameshop.factory.CategoryFactory;
 import id.ac.ui.cs.advprog.adproggameshop.factory.CategoryHandler;
 import id.ac.ui.cs.advprog.adproggameshop.model.Game;
+import id.ac.ui.cs.advprog.adproggameshop.model.Review;
 import id.ac.ui.cs.advprog.adproggameshop.model.User;
 import id.ac.ui.cs.advprog.adproggameshop.repository.GameRepository;
 import id.ac.ui.cs.advprog.adproggameshop.service.GameService;
@@ -15,7 +16,6 @@ import id.ac.ui.cs.advprog.adproggameshop.utility.OneClickBuy;
 import jakarta.servlet.http.HttpSession;
 import jakarta.validation.Valid;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.validation.BindingResult;
@@ -23,7 +23,6 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("/game")
@@ -38,33 +37,27 @@ public class GameController {
     @Autowired
     public GameRepository gameRepository;
 
+    private final static String CATEGORIES_STRING = "categories";
+    private final static String GAMES_STRING = "games";
+    private final static String USER_LOGIN_SESSION = "userLogin";
 
-    @GetMapping("/test")
-    public ResponseEntity<String> test() {
-        byte[] byteArray = {1, 2, 3, 4, 5};
-        User owner = new User("username", "email", "password", 100, "bio", byteArray, false);
-        User owner1 = userService.save(owner);
-        Game game = new Game("name", 10, "description", 5, "category", owner1);
-        Game game1 = gameService.save(game);
-        return ResponseEntity.ok(game1.toString());
-    }
 
     @GetMapping("/list")
     public String gameListPage(Model model) {
         List<GameDTO> games = gameService.findAllBy();
         List<String> categories = Arrays.stream(CategoryEnums.values())
                 .map(CategoryEnums::getLabel)
-                .collect(Collectors.toList());
-        model.addAttribute("categories", categories);
-        model.addAttribute("games", games);
+                .toList();
+        model.addAttribute(CATEGORIES_STRING, categories);
+        model.addAttribute(GAMES_STRING, games);
         return "gameList";
     }
 
     @GetMapping("/list/personal")
     public String personalGameListPage(HttpSession session, Model model) {
-        User user = (User) session.getAttribute("userLogin");
+        User user = (User) session.getAttribute(USER_LOGIN_SESSION);
         List<GameDTO> games = gameService.findAllByOwner(user);
-        model.addAttribute("games", games);
+        model.addAttribute(GAMES_STRING, games);
         return "personalGameList";
     }
 
@@ -72,7 +65,7 @@ public class GameController {
     public String addGamePage(GameForm gameForm, Model model) {
         List<CategoryOption> optionsList = Arrays.stream(CategoryEnums.values())
                 .map(option -> new CategoryOption(option.getLabel(), option.getLabel()))
-                .collect(Collectors.toList());
+                .toList();
         model.addAttribute("categoryOptions", optionsList);
         return "addGame";
     }
@@ -82,20 +75,20 @@ public class GameController {
         if (bindingResult.hasErrors()) {
             List<CategoryOption> optionsList = Arrays.stream(CategoryEnums.values())
                     .map(option -> new CategoryOption(option.getLabel(), option.getLabel()))
-                    .collect(Collectors.toList());
+                    .toList();
             model.addAttribute("categoryOptions", optionsList);
             return "addGame";
         }
-        User user = (User) session.getAttribute("userLogin");
+        User user = (User) session.getAttribute(USER_LOGIN_SESSION);
         gameForm.setOwner(user);
         Game game = gameForm.createGame();
         gameService.saveWithOwner(game, user);
-        return "redirect:/personal-page";
+        return "redirect:list/personal";
     }
 
     @PostMapping("/buy")
     public String buyGame(Model model, HttpSession session, @RequestParam String gameId) {
-        User buyer = (User) session.getAttribute("userLogin");
+        User buyer = (User) session.getAttribute(USER_LOGIN_SESSION);
         try {
             gameService.buyGame(Long.parseLong(gameId), buyer, 1, new OneClickBuy());
         } catch (RuntimeException error) {
@@ -117,8 +110,8 @@ public class GameController {
         if (categoryEnum == null) {
             List<String> categories = Arrays.stream(CategoryEnums.values())
                     .map(CategoryEnums::getLabel)
-                    .collect(Collectors.toList());
-            model.addAttribute("categories", categories);
+                    .toList();
+            model.addAttribute(CATEGORIES_STRING, categories);
             model.addAttribute("error", "Invalid category: " + category);
             return "error";
         }
@@ -128,9 +121,51 @@ public class GameController {
 
         List<String> categories = Arrays.stream(CategoryEnums.values())
                 .map(CategoryEnums::getLabel)
-                .collect(Collectors.toList());
-        model.addAttribute("categories", categories);
-        model.addAttribute("games", games);
+                .toList();
+        model.addAttribute(CATEGORIES_STRING, categories);
+        model.addAttribute(GAMES_STRING, games);
         return "gameList";
+    }
+    @GetMapping("/{gameId}")
+    public String gameDetailPage(@PathVariable Long gameId, Model model, HttpSession session) {
+        Game game = gameService.findByProductId(gameId);
+        if (game == null) {
+            return "error_page";
+        }
+
+        List<Review> reviews = gameService.getReviewsByGame(game);
+
+        model.addAttribute("game", game);
+        model.addAttribute("reviews", reviews);
+
+        User user = (User) session.getAttribute(USER_LOGIN_SESSION);
+        model.addAttribute("user", user);
+
+        return "gameDetail";
+    }
+
+    @PostMapping("/{gameId}/review")
+    public String addReview(@PathVariable Long gameId, @RequestParam String reviewText,
+                            @RequestParam int rating, HttpSession session) {
+        User user = (User) session.getAttribute("userLogin");
+        if (user == null) {
+            return "redirect:/login";
+        }
+
+        Game game = gameService.findByProductId(gameId);
+
+        if (game == null) {
+            return "redirect:/game/list";
+        }
+
+        Review review = new Review();
+        review.setUser(user);
+        review.setGame(game);
+        review.setReviewText(reviewText);
+        review.setRating(rating);
+
+        gameService.saveReview(review);
+
+        return "redirect:/game/" + gameId;
     }
 }
